--- a/namho.html
+++ b/namho.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-<h2><a href="98pam.htmi">98팸 홈페이지</a></h2>
+<h2><a href="98pam.html">98팸 홈페이지</a></h2>
 <h3>구성원들</h3>
 <ol>
 <li><a href="kimminsu.html" title="김민수소개">김민수</a></li>
